prevent bottom row overlap in intro and trends

--- a/css/trends.css
+++ b/css/trends.css
@@ -32,7 +32,9 @@ div.container {
   line-height: 23px;
   color: #000;
 }
-
+#penultimate-step{
+  margin-bottom: 300px;
+}
 #sections .title {
   font-size:26px;
   line-height: 33px;
